--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 
 				<div class="gallery-container">
 
+					<button class="gallery-button" onclick="richOverlay.open(9);">
+						<div class="label-overlay">
+							<div class="label">
+								<h1>Back to School</h1>
+								<h2>Web Design / Prototype</h2>
+							</div>
+						</div>
+						<img src="img/gallery/bts-2021.jpg" alt="MSI Back To School Guide Graphic" />
+					</button>
+
 					<button class="gallery-button" onclick="richOverlay.open(8);">
 						<div class="label-overlay">
 							<div class="label">
@@ -128,6 +138,8 @@
 						</div>
 						<img src="img/gallery/reach-flyers.jpg" alt="Reach Presents - Can You Hear Me?" />
 					</button>
+
+					<!--
 					<button class="gallery-button" onclick="richOverlay.open(0);">
 						<div class="label-overlay">
 							<div class="label">
@@ -137,6 +149,7 @@
 						</div>
 						<img src="img/gallery/water-shirt.jpg" alt="Skull Factory Monster Design"/>
 					</button>
+				-->
 				</div>
 
 			</main>
