--- a/work.html
+++ b/work.html
@@ -461,4 +461,50 @@
 
 
 
+				<div class="rich-overlay-content">
+
+					<div class="content-inner">
+						<div class="light-gallery">
+							<a class="lg-item" style="width:100%;" data-src="img/work/bts-2021/kv-1920.jpg">
+								<img src="img/work/bts-2021/kv-1600.jpg" />
+							</a>
+
+							<div class="content-info-outer">
+								<div class="content-info">
+									<h1>MSI Back to School Buying Guide </h1>
+									<h2>Web Design, Prototype, Adobe XD - MSI</h2>
+									<p>
+										For the back to school season, I was tasked with design and developing a marketing website with a product discovery feature.
+										For this project, I created a web prototype to illustrate an interactive "Buying Guide," allowing users to learn more about products.
+										The prototype utilizes hover states, tap interactions, and an overlay.
+									</p>
+									<a class="content-link" href="https://xd.adobe.com/view/3338fd46-1fb4-4e60-b02c-1a6044456423-666b/?fullscreen" target="_blank">
+										See Prototype
+									</a>
+								</div>
+							</div>
+							<div class="clearfix inner-image">
+								<div style="width:49%; float:left;">
+									<a class="lg-item white-border" data-src="img/work/bts-2021/p-1-1600.jpg">
+										<img src="img/work/bts-2021/p-1-800.jpg" />
+									</a>
+								</div>
+								<div style="width:49%; float:right; ">
+									<a class="lg-item white-border" data-src="img/work/bts-2021/p-2-1600.jpg">
+										<img src="img/work/bts-2021/p-2-800.jpg" />
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="content-footer-outer">
+						<div class="content-footer">
+							<p class="note">
+								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
+							</p>
+						</div>
+					</div>
+				</div>
+
+
 </html>
