--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 					<div class="noise"></div>
 				</header>
 				<canvas id="canvas_3d"></canvas>
+				<div id="bg_wrap">
+					<div class="kv_bg bg-des" aria-hidden="true"></div>
+					<div class="kv_bg bg-dev" aria-hidden="true"></div>
+					<div class="kv_bg bg-gfx" aria-hidden="true"></div>
+					<div class="kv_bg bg-tech" aria-hidden="true"></div>
+					<div class="kv_bg bg-des" aria-hidden="true"></div>
+					<div class="kv_bg bg-dev" aria-hidden="true"></div>
+					<div class="kv_bg bg-gfx" aria-hidden="true"></div>
+					<div class="kv_bg bg-tech" aria-hidden="true"></div>
+					<div class="kv_bg bg-des" aria-hidden="true"></div>
+					<div class="kv_bg bg-dev" aria-hidden="true"></div>
+					<div class="kv_bg bg-gfx" aria-hidden="true"></div>
+					<div class="kv_bg bg-tech" aria-hidden="true"></div>
+					<div class="kv_bg bg-des" aria-hidden="true"></div>
+					<div class="kv_bg bg-dev" aria-hidden="true"></div>
+				</div>
 			</div>
 
 			<div class="wow slideInUp" style="padding:5em 20px; color:#fff; text-align:center;">
