--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
 
 				<div class="gallery-container">
 
+					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(10);">
+						<div class="label-overlay">
+							<div class="label">
+								<h1>Study & Play</h1>
+								<h2>Web Design</h2>
+							</div>
+						</div>
+						<img src="img/gallery/study_play.jpg" alt="MSI Study & Play in Style" />
+					</button>
+
 					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(9);">
 						<div class="label-overlay">
 							<div class="label">
@@ -135,26 +145,6 @@
 					</div>
 					<img src="img/gallery/lucky-sticker.jpg" alt="MSI Lucky Powering Up" />
 				</button>
-
-					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(5);">
-						<div class="label-overlay">
-							<div class="label">
-								<h1>Fan Day</h1>
-								<h2>Marketing Materials</h2>
-							</div>
-						</div>
-						<img src="img/gallery/msi-fanday.jpg" alt="MSI Fan Day Boat Graphic" />
-					</button>
-
-					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(4);">
-						<div class="label-overlay">
-							<div class="label">
-								<h1>Smash the Competition</h1>
-								<h2>Poster</h2>
-							</div>
-						</div>
-						<img src="img/gallery/msi-bh-comic.jpg" alt="MSI Super Power Laptops" />
-					</button>
 
 
 					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(3);">
