--- a/work.html
+++ b/work.html
@@ -507,4 +507,113 @@
 				</div>
 
 
+
+				<div class="rich-overlay-content">
+
+					<div class="content-inner">
+						<div class="light-gallery">
+							<a class="lg-item" style="width:100%;" data-src="img/work/study_play/preview.jpg">
+								<img src="img/work/study_play/preview.jpg" />
+							</a>
+
+							<div class="content-info-outer">
+								<div class="content-info">
+									<h1>Study & Play In Style </h1>
+									<h2>Web Design, Graphic Design, Illustration</h2>
+									<p>
+										MSI marketing scheduled to run a web/social media sweepstakes to promote computer gaming peripherals for the back to school season. With the target audience being students and gamers, I was tasked with designing an energetic, youthful aesthetic for the campaign.
+									</p>
+								</div>
+							</div>
+
+							<div class="divider"></div>
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Key Visual </h3>
+									<p>
+										The campaign's key visual was primarily composed of geometric vectors to establish a clean and modern visual style. The bright, contrasting, yellow color scheme was chosen to establish youthful energy that is also reminiscent of school buses and composition books. The illustrated controller was used as a main graphic element due to its prominence as a gaming symbol.
+									</p>
+								</div>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/study_play/kv.jpg">
+									<img src="img/work/study_play/kv.jpg" />
+								</a>
+							</div>
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Style </h3>
+									<p>
+										The style choices for the campaign's website were directly pulled from the key visual. Fonts, colors, and graphic elements were reused to maintain consistency in the website's design and the key visual.
+									</p>
+								</div>
+							</div>
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/study_play/style.jpg">
+									<img src="img/work/study_play/style.jpg" />
+								</a>
+							</div>
+
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Responsive Web Design </h3>
+									<p>
+										The campaign's website was responsively design to support mobile and desktop browsers. The content consists of the key visual, short intro, a list of prizes, instructions to enter, and an embedded sweepstakes form. Simple slide in animations were added to support the energetic, dynamic tone.
+									</p>
+								</div>
+							</div>
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/study_play/responsive.jpg">
+									<img src="img/work/study_play/responsive.jpg" />
+								</a>
+								<video width="320" height="240" autoplay muted loop>
+								  <source src="img/work/study_play/webview.mp4" type="video/mp4">
+								</video>
+							</div>
+
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Social Media Banners </h3>
+									<p>
+										The key visual was reused to create banner ads and social graphics to promote the website and campaign.
+									</p>
+								</div>
+							</div>
+
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/study_play/social-1.jpg">
+									<img src="img/work/study_play/social-1.jpg" />
+								</a>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/study_play/social-2.jpg">
+									<img src="img/work/study_play/social-2.jpg" />
+								</a>
+							</div>
+
+						</div>
+					</div>
+					<div class="content-footer-outer">
+						<div class="content-footer">
+							<p class="note">
+								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
+							</p>
+						</div>
+					</div>
+				</div>
+
+
 </html>
