Added brand store

--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
 
 				<div class="gallery-container">
 
+					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(11);">
+						<div class="label-overlay">
+							<div class="label">
+								<h1>MSI Brand Store</h1>
+								<h2>Web Design / Branding</h2>
+							</div>
+						</div>
+						<img src="img/gallery/msi_amazon.jpg" alt="MSI Study & Play in Style" />
+					</button>
+
 					<button class="gallery-button wow slideInUp" onclick="richOverlay.open(10);">
 						<div class="label-overlay">
 							<div class="label">
