--- a/work.html
+++ b/work.html
@@ -202,15 +202,6 @@
 
 				</div>
 			</div>
-			<div class="content-footer-outer">
-				<div class="content-footer">
-					<p class="note">
-						MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
-						Intel<sup>&reg;</sup> Core logo is a trademark of Intel Corporation.
-						NVIDIA<sup>&reg;</sup> GTX logo is a trademark of NVIDIA.
-					</p>
-				</div>
-			</div>
 		</div>
 
 
@@ -253,14 +244,6 @@
 						</a>
 					</div>
 
-				</div>
-			</div>
-			<div class="content-footer-outer">
-				<div class="content-footer">
-					<p class="note">
-						MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
-						NEX Navy Exchange logo is a trademark of United States Navy under the Navy Exchange Service Command.
-					</p>
 				</div>
 			</div>
 		</div>
@@ -330,13 +313,6 @@
 					</div>
 				</div>
 
-				<div class="content-footer-outer">
-					<div class="content-footer">
-						<p class="note">
-							MSI gaming Lucky character graphics and company logos are trademarks of MSI.
-						</p>
-					</div>
-				</div>
 			</div>
 
 
@@ -393,14 +369,6 @@
 						</div>
 
 					</div>
-					<div class="content-footer-outer">
-						<div class="content-footer">
-							<p class="note">
-								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
-								Character Art provided by Blizzard Entertainment, Inc.
-							</p>
-						</div>
-					</div>
 				</div>
 
 
@@ -450,13 +418,6 @@
 
 						</div>
 					</div>
-					<div class="content-footer-outer">
-						<div class="content-footer">
-							<p class="note">
-								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
-							</p>
-						</div>
-					</div>
 				</div>
 
 
@@ -495,13 +456,6 @@
 									</a>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="content-footer-outer">
-						<div class="content-footer">
-							<p class="note">
-								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
-							</p>
 						</div>
 					</div>
 				</div>
@@ -606,11 +560,157 @@
 
 						</div>
 					</div>
-					<div class="content-footer-outer">
-						<div class="content-footer">
-							<p class="note">
-								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
-							</p>
+				</div>
+
+
+
+
+				<div class="rich-overlay-content">
+
+					<div class="content-inner">
+						<div class="light-gallery">
+							<a class="lg-item" style="width:100%;" data-src="img/work/msi_amazon/kv.jpg">
+								<img src="img/work/msi_amazon/kv.jpg" />
+							</a>
+
+							<div class="content-info-outer">
+								<div class="content-info">
+									<h1>MSI Brand Store </h1>
+									<h2>Branding, Copywriting, Web Design, Graphic Design</h2>
+									<p>
+										In an effort to improve customer experience on MSI online brand stores for various retail channels (Amazon, Newegg, etc),
+								I redesigned the homepage of the MSI brand store on Amazon. The redesign would be used as a model for
+								the MSI brand stores on other retailer websites.
+									</p>
+								</div>
+							</div>
+
+							<div class="divider"></div>
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Competitive Analysis</h3>
+						<p>
+							In the research phase of this project, I looked through competitor brand stores
+							to identify effective aspects in their brand store strategy.
+							The use of strong text elements with consistent tone allow the stores to deliver
+						 	branded messaging while also serving as a product catalogue.
+
+
+						</p>
+								</div>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/msi_amazon/comp.jpg">
+									<img src="img/work/msi_amazon/comp.jpg" />
+								</a>
+							</div>
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Defining Objectives</h3>
+						<p>
+							The original MSI brand store homepage (pictured below) was serving only as a product catalogue.
+							Based on my competitive analysis, I decided that brand messaging would be important in the page refresh.
+							The page refresh would also require the addition of new product lines and product categories.
+							I would have to find a creative way to weave a brand message that connected the numerous products.
+						</p>
+								</div>
+							</div>
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/msi_amazon/orig.jpg">
+									<img src="img/work/msi_amazon/orig.jpg" />
+								</a>
+							</div>
+
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Slogan</h3>
+						<p>
+							In 2020 MSI introduced a new "Business and Productivity" product category for laptops, desktops, and monitors,
+							creating a total 3 product categories: Gaming, Creator, Business and Productivity. In 2021, MSI launched a number of
+							pc components: Liquid Coolers, Power Supplies, and Solid State Drives. To efficiently describe MSI's product offerings,
+							I created a simple slogan "Work, Play, Create, Build" which would encompass the Business and Productivity, Gaming, Creator, and
+							PC components respectively.</p>
+								</div>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/msi_amazon/slogan.jpg">
+									<img src="img/work/msi_amazon/slogan.jpg" />
+								</a>
+							</div>
+
+
+
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Style</h3>
+						<p>
+							I created a style guide to propagate the redesign throughout the MSI brand store's other pages.
+							The font and colors are follow MSI's corporate brand style guide, but the tracking was tightened
+							to energize the headline text. Strong and consistent text elements would be important to deliver the brand message.
+						</p>
+								</div>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/msi_amazon/style.jpg">
+									<img src="img/work/msi_amazon/style.jpg" />
+								</a>
+							</div>
+
+
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h3>Storytelling and Design</h3>
+						<p>
+							In order to effectively market the various products, I had to group product lines into categories that would appeal to certain audiences
+							and then use photos and copy that would cater to that audience group. Strong headlines would establish and define the product groups
+							when scrolling through the brand store.
+							<br /><br />Laptops are in its own group. I believed lifestyle-focused
+							photography best highlighted the product's portability and design.
+							<br /><br />
+							Desktops, monitors, and peripherals were grouped together
+							as "Battlestation Ready Hardware," appealing to a group of computer enthusiasts that enjoy designing their computer desks setups.
+							<br /><br />
+							PC cases and components were grouped together with photos showcasing their use in computer builds.
+						</p>
+								</div>
+							</div>
+
+							<div class="clearfix inner-image">
+								<video width="320" height="240" autoplay muted loop>
+								  <source src="img/work/msi_amazon/webview.mp4" type="video/mp4">
+								</video>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-1.jpg">
+									<img src="img/work/msi_amazon/sections-1.jpg" />
+								</a>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-2.jpg">
+									<img src="img/work/msi_amazon/sections-2.jpg" />
+								</a>
+							</div>
+
+							<div class="clearfix inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-3.jpg">
+									<img src="img/work/msi_amazon/sections-3.jpg" />
+								</a>
+							</div>
+
 						</div>
 					</div>
 				</div>
