--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<div class="label-overlay">
 							<div class="label">
 								<h1>MSI Brand Store</h1>
-								<h2>Web Design / Branding</h2>
+								<h2>Web Design / Storytelling</h2>
 							</div>
 						</div>
 						<img src="img/gallery/msi_amazon.jpg" alt="MSI Study & Play in Style" />
