--- a/work.html
+++ b/work.html
@@ -576,7 +576,7 @@
 							<div class="content-info-outer">
 								<div class="content-info">
 									<h1>MSI Brand Store </h1>
-									<h2>Branding, Copywriting, Web Design, Graphic Design</h2>
+									<h2>Storytelling, Copywriting, Web Design, Graphic Design</h2>
 									<p>
 										In an effort to improve customer experience on MSI online brand stores for various retail channels (Amazon, Newegg, etc),
 								I redesigned the homepage of the MSI brand store on Amazon. The redesign would be used as a model for
@@ -674,15 +674,9 @@
 									<h3>Storytelling and Design</h3>
 						<p>
 							In order to effectively market the various products, I had to group product lines into categories that would appeal to certain audiences
-							and then use photos and copy that would cater to that audience group. Strong headlines would establish and define the product groups
-							when scrolling through the brand store.
-							<br /><br />Laptops are in its own group. I believed lifestyle-focused
-							photography best highlighted the product's portability and design.
-							<br /><br />
-							Desktops, monitors, and peripherals were grouped together
-							as "Battlestation Ready Hardware," appealing to a group of computer enthusiasts that enjoy designing their computer desks setups.
-							<br /><br />
-							PC cases and components were grouped together with photos showcasing their use in computer builds.
+							and then use photos and copy that would cater to that audience group. The products groups are then ordered by audience size and technical knowledge
+							(mass market to enthusiasts).
+							Strong headlines would establish and define the product groups when scrolling through the brand store.
 						</p>
 								</div>
 							</div>
@@ -693,18 +687,49 @@
 								</video>
 							</div>
 
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h4>Laptops</h4>
+							<p>Laptops are in its own group. I created the subehader "portable performance" and utilized
+								lifestyle-focused photography to highlight the product's portability, design, and processing power.
+								The laptops also present the various product categories: Gaming, Business & Productivity, and Content Creation,
+								which correlates to the slogan.
+							</p>
+								</div>
+							</div>
 							<div class="clearfix inner-image">
 								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-1.jpg">
 									<img src="img/work/msi_amazon/sections-1.jpg" />
 								</a>
 							</div>
 
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h4>Desktops, Monitors, and Peripherals</h4>
+							<p>
+								Desktops, monitors, and peripherals were grouped together
+								as "Battlestation Ready Hardware," appealing to a group of computer enthusiasts that enjoy designing their computer desks setups.
+								This product group would be an opportunity to display different types of "battlestations" to draw up inspiration for these enthusiasts.
+							</p>
+								</div>
+							</div>
 							<div class="clearfix inner-image">
 								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-2.jpg">
 									<img src="img/work/msi_amazon/sections-2.jpg" />
 								</a>
 							</div>
 
+							<div class="content-info-outer" style="padding-bottom:0;">
+								<div class="content-info">
+									<h4>Cases and Components</h4>
+							<p>
+								PC cases and components were grouped together with photos showcasing their use in computer builds. This product
+								group has the simplest design, as the main focus is to display the various PC component in an orderly faster.
+								This is essentially a product catalogue for technical users.
+							</p>
+
+								</div>
+							</div>
 							<div class="clearfix inner-image">
 								<a class="lg-item white-border" style="width:100%; max-width:504px;" data-src="img/work/msi_amazon/sections-3.jpg">
 									<img src="img/work/msi_amazon/sections-3.jpg" />
